--- a/django/3일차(25.11.05)/study1/templates/registration/signup.html
+++ b/django/3일차(25.11.05)/study1/templates/registration/signup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>북마크 리스트 페이지입니다.</h1>
-    {% for bookmark in bookmarks %}
-        <p>
-            <a href="/bookmark/{{ bookmark.id }}">{{ bookmark.name }}</a>
-        </p>
-    {% endfor %}
+<h1>회원가입</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button>회원가입</button>
+</form>
 </body>
 </html>
