4일차 과제 완료

--- a/django/2일차(25.11.04)/task/templates/todo/todo.html
+++ b/django/2일차(25.11.04)/task/templates/todo/todo.html
@@ -64,7 +64,7 @@
         {% if request.user.is_authenticated %}
         <h1>{{ request.user.username }}의 Todo List</h1>
         <ul>
-            {% for todo in data %}
+            {% for todo in result %}
                 <li><a href="{% url 'todo_info' todo.id %}">{{ todo.title }}</a></li>
             {% endfor %}
         </ul>
