--- a/django/4일차(25.11.06)/study/templates/blog/blog_list.html
+++ b/django/4일차(25.11.06)/study/templates/blog/blog_list.html
@@ -1,19 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-
-</body>
+{% extends 'base.html' %}
+{%  block content %}
 <h1>블로그 목록</h1>
 {% for blog in blogs %}
 <p>
-    <a href="">{{ blog.title }} - {{ blog.created_at }}</a>
+    <a href="{% url 'blog_detail' blog.pk %}">
+        {{ blog.title }} <span>{{ blog.author.username }}</span>  - <small>{{ blog.created_at | date:"Y-m-d"}} </small>
+    </a>
 </p>
 {% endfor %}
-</html>
+{% endblock %}
